--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </form>
     </section> 
     <footer>
-        <p>&copy; 2024 Discover Malaysia. All rights reserved.</p>
+        <p> Made by Team : Vision.</p>
     </footer>
     <script src="script.js"></script>
 </body>
